--- a/core/pom.xml
+++ b/core/pom.xml
@@ -21,14 +21,14 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.google</groupId>
-        <artifactId>darkcoinj-parent</artifactId>
+        <artifactId>pyramidscoinj-parent</artifactId>
         <version>0.12-SNAPSHOT</version>
     </parent>
 
-    <artifactId>darkcoinj</artifactId>
+    <artifactId>pyramidscoinj</artifactId>
 
-    <name>darkcoinj</name>
-    <description>A Java darkcoin library</description>
+    <name>pyramidscoinj</name>
+    <description>A Java pyramidscoin library</description>
 
     <packaging>jar</packaging>
 
@@ -226,7 +226,7 @@
             <version>3.0</version>
             <scope>test</scope>
         </dependency>
-        <!-- darkcoinj consumers are expected to provide their own SLF4J adapters
+        <!-- pyramidscoinj consumers are expected to provide their own SLF4J adapters
              such as logback, slf4j-log4j12, slf4j-jcl and so on
              see http://www.slf4j.org/faq.html -->
         <dependency>
