--- a/tools/pom.xml
+++ b/tools/pom.xml
@@ -21,16 +21,16 @@
   <parent>
     <groupId>com.google</groupId>
 
-    <artifactId>darkcoinj-parent</artifactId>
+    <artifactId>pyramidscoinj-parent</artifactId>
     <version>0.12-SNAPSHOT</version>
 
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
-  <artifactId>darkcoinj-tools</artifactId>
+  <artifactId>pyramidscoinj-tools</artifactId>
 
-  <name>darkcoinj Tools</name>
-  <description>A collection of useful tools that use the darkcoinj library to perform wallet operations</description>
+  <name>pyramidscoinj Tools</name>
+  <description>A collection of useful tools that use the pyramidscoinj library to perform wallet operations</description>
 
   <build>
 
@@ -74,7 +74,7 @@
   <dependencies>
     <dependency>
       <groupId>com.google</groupId>
-      <artifactId>darkcoinj</artifactId>
+      <artifactId>pyramidscoinj</artifactId>
       <version>${project.parent.version}</version>
     </dependency>
     <dependency>
